app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@c_import_from_x.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/c_import_from_x.json
---
[
    "ImportTx": "Importing in C-Chain",
    "Amount": "0.268435456",
    "To": "0x0000000000000000000000000000000000000000",
    "From ": "X Chain",
    "Fee": "0",
]
