app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@create_subnet.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/create_subnet.json
---
[
    "CreateSubnet": "transaction",
    "Owner address": "1mg47uqd7stkvqrp57ds7m28txra45u2un5p6pc",
    "Fee(AVAX)": "2000.001",
]
