app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@p_export_to_x.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/p_export_to_x.json
---
[
    "Export Tx": "P to X Chain",
    "Amount": "0.000012345 AVAX to ",
    "Address": "fuji12yp9cc0melq83a5nxnurf0nd6fk4t224unmnwx",
    "Fee": "0.123432099",
]
